# freer-cofreer

./: .gitignore  LICENSE  README.md  cabal.project  freer-cofreer.cabal  stack.yaml
benchmark/: Bench.hs
src/Control/Comonad/Cofree/: Cofreer.hs
src/Control/Comonad/Trans/Cofree/: Cofreer.hs
src/Control/Monad/Free/: Freer.hs
src/Control/Monad/Trans/Free/: Freer.hs
test/: Spec.hs
test/Control/Comonad/Cofree/Cofreer/: Spec.hs
test/Control/Comonad/Trans/Cofree/Cofreer/: Spec.hs
test/Control/Monad/Free/Freer/: Spec.hs
test/Control/Monad/Trans/Free/Freer/: Spec.hs
test/Test/Hspec/: LeanCheck.hs
