name:                freer-cofreer
version:             0.0.0.1
synopsis:            Freer monads and Cofreer comonads.
description:         An implementation of Oleg Kiselyov’s "Free and Freer monads"
                     .
                     http://okmij.org/ftp/Computation/free-monad.html
homepage:            https://github.com/robrix/freer-cofreer#readme
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2017 Rob Rix
category:            Control, Monads
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Comonad.Cofree.Cofreer
                     , Control.Monad.Free.Freer
  build-depends:       base >= 4.7 && < 5
                     , comonad
                     , free
                     , recursion-schemes
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Control.Comonad.Cofree.Cofreer.Spec
                     , Control.Monad.Free.Freer.Spec
                     , Data.Functor.Listable
                     , Test.Hspec.LeanCheck
  build-depends:       base
                     , freer-cofreer
                     , hspec
                     , hspec-core
                     , HUnit
                     , leancheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Bench.hs
  build-depends:       base
                     , freer-cofreer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/robrix/freer-cofreer
